new navigation/page site layout

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -14,7 +14,7 @@ let navPadding = marquee ? "0 0 1.2rem 0;" : "1.2rem 0;";
   <nav>
     <div class="nav-link-container">
       <a class="nav-link" href="/">home</a>
-      <a class="nav-link" href="/work">work</a>
+      <a class="nav-link" href="/resume">resume</a>
     </div>
     <!-- <div id="logo"><img src="./logo.png" alt="LOGO" /></div> -->
     <a class="nav-logo" href="/">
@@ -35,7 +35,7 @@ let navPadding = marquee ? "0 0 1.2rem 0;" : "1.2rem 0;";
       </svg>
     </a>
     <div class="nav-link-container">
-      <a class="nav-link" href="/about">about</a>
+      <a class="nav-link" href="/portfolio">portfolio</a>
       <a class="nav-link" href="/contact">contact</a>
     </div>
     <!-- <div>blog</div> -->
