--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,7 +1,7 @@
 ---
-import TeachingGoals from "../../components/TeachingGoals.astro";
-import WorkTimeline from "../../components/WorkTimeline.astro";
-import ScrollLayout from "../../layouts/ScrollLayout.astro";
+import TeachingGoals from "../components/TeachingGoals.astro";
+import WorkTimeline from "../components/WorkTimeline.astro";
+import ScrollLayout from "../layouts/ScrollLayout.astro";
 ---
 
 <ScrollLayout title="Professional Work" snapScroll={true}>
@@ -140,7 +140,7 @@ import ScrollLayout from "../../layouts/ScrollLayout.astro";
   #xp-nav li:nth-child(1),
   #xp-nav li:nth-child(1):before,
   #xp-nav li:nth-child(1) > a {
-    background: url("../../assets/DanielTeachingCropped1.jpg");
+    background: url("../assets/DanielTeachingCropped1.jpg");
     background-position: right;
     color: darkgoldenrod;
     background-repeat: no-repeat;
