changed video to gif bc safari does not autoplay videos

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,6 +1,7 @@
 ---
 import barge from "../assets/barge.jpeg";
 import IMG_4486 from "../assets/IMG_4486.jpg";
+import haulingAss from "../assets/haulingAss.gif";
 import ddc from "../assets/DDC.jpg";
 import dmpLocation1 from "../assets/dmpLocation1.png";
 import dmpLocation2 from "../assets/dmpLocation2.png";
@@ -65,9 +66,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
     <div class="image">
       <img class="" src={barge.src} />
       <img src={IMG_4486.src} />
-      <video autoplay loop muted>
+      <!-- <video autoplay loop muted>
         <source src="/IMG_7643.mov" type="video/quicktime" />
-      </video>
+      </video> -->
+      <img src={haulingAss.src} />
     </div>
   </div>
   <div class="item-container" id="ConEd">
