Add new message to FooterComments component

--- a/src/components/FooterComments.astro
+++ b/src/components/FooterComments.astro
@@ -7,6 +7,9 @@
     >
   </div>
   <div>
+    coming to a browser near you!<span class="emoji">&nbsp;&#x1F60B;</span>
+  </div>
+  <div>
     shh I'm watching Spirited Away<span class="emoji">&nbsp;&#x1F60B;</span>
   </div>
   <div>
