--- a/src/pages/splash.astro
+++ b/src/pages/splash.astro
@@ -1055,8 +1055,11 @@ let waaaat = "black";
     color: #fbefe0;
     font-size: 2rem;
     text-align: center; */
-    padding-bottom: 40%;
+    /* padding-bottom: 40%; */
     z-index: 2;
+    position: relative;
+    z-index: 2;
+    bottom: 20%;
   }
   .image {
     position: absolute;
@@ -1071,6 +1074,7 @@ let waaaat = "black";
     width: 500px;
     max-width: 100%;
     max-height: 100%;
+    height: 100%;
   }
   .full.splatter-wrapper {
     justify-content: end;
@@ -1080,9 +1084,15 @@ let waaaat = "black";
     top: 50%;
     left: 50%;
     width: 100%;
-    height: 70%;
+    /* height: 70%;
+    z-index: 1;
+    transform: translate(-50%, -50%); */
+    height: 100%;
     z-index: 1;
     transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .full p {
     color: #fbefe0;
