removed max width to ensure image covers

--- a/src/pages/splash.astro
+++ b/src/pages/splash.astro
@@ -971,7 +971,7 @@ let waaaat = "black";
       <div class="splatter">
         <!-- <Splatter2 /> -->
         <svg
-          style="max-width: 100%; max-height: 100%; position: absolute;"
+          style="max-height: 100%; position: absolute;"
           width="1269"
           height="931"
           viewBox="0 0 1269 931"
