added descriptions links and styles

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -162,10 +162,13 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
                     <a href="#" target="_blank">the program</a>!
                 </p>
                 <p>
-                    You can view their work <a
+                    Check out SYEP <a
                         href="https://danielsegarra.dev/LemonPianoPillow/"
-                        target="_blank">HERE</a
-                    >!
+                        target="_blank">Cohort 1's</a
+                    > and <a
+                        href="https://danielsegarra.dev/LemonPianoPillow/"
+                        target="_blank">Cohort 2's</a
+                    > final projects!
                 </p>
             </div>
         </div>
@@ -274,10 +277,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
                 is designed to help students gain the skills and experience
                 needed to secure a job in the tech industry.
                 <p>
-                    You can view their work <a
+                    Check out <a
                         href="https://danielsegarra.dev/LemonPianoPillow/"
-                        target="_blank">HERE</a
-                    >!
+                        target="_blank">Cohort 4's</a
+                    > final projects!
                 </p>
             </div>
         </div>
@@ -313,10 +316,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
                     </li>
                 </ul>
                 <p>
-                    You can view their work <a
+                    Check out <a
                         href="https://danielsegarra.dev/LemonPianoPillow/"
-                        target="_blank">HERE</a
-                    >!
+                        target="_blank">Cohort 5's</a
+                    > final projects!
                 </p>
             </div>
         </div>
@@ -354,10 +357,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
                     </li>
                 </ul>
                 <p>
-                    You can view their work <a
+                    Check out <a
                         href="https://danielsegarra.dev/LemonPianoPillow/"
-                        target="_blank">HERE</a
-                    >!
+                        target="_blank">Columbia DDC Summer 2023</a
+                    > final projects!
                 </p>
             </div>
         </div>
@@ -380,6 +383,19 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap");
         @import url("https://fonts.googleapis.com/css2?family=Rampart+One&display=swap");
+        .description a {
+            color: #e6dfd6;
+            text-decoration: underline;
+            transition: all 0.3s ease-in-out;
+        }
+        .description a:hover {
+            font-weight: bold;
+            text-decoration: underline;
+            text-decoration-color: burlywood;
+            -moz-text-decoration-style: wavy;
+            text-decoration-style: wavy;
+            text-decoration-thickness: 2px;
+        }
         #metro-marine .image {
             /* position: relative; */
         }
