trailing comma in code and making banner text shorter to keep it from breaking on smaller screens (easier that adjusting the UI)

--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -9,8 +9,7 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
         <a
           href="https://danielsegarra.dev/LemonPianoPillow/"
           target="_blank"
-          rel="noopener noreferrer"
-          ><mark>Celebrating Student Accoplishments</mark></a
+          rel="noopener noreferrer"><mark>Student Accoplishments</mark></a
         >
       </li>
       <li>
