--- a/src/components/CFFGSVG.astro
+++ b/src/components/CFFGSVG.astro
@@ -161,7 +161,8 @@
 <style>
   svg {
     width: auto;
-    height: fit-content;
+    /* height: fit-content; */
+    height: 100%;
     max-width: 100%;
     max-height: 100%;
   }
