condensing full stack description

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -221,10 +221,6 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
             understand user needs, translate them into technical requirements,
             implement scalable solutions, and ensure optimal user experiences.
           </li>
-          <li class="responsibilities">
-            Identified and resolved areas for improvement, complex bugs, and
-            issues across UI/UX, accessibility, security, and performance
-          </li>
           <!-- <li class="responsibilities">
             Conducted a comprehensive frontend audit to identify areas for
             improvement across UI/UX, accessibility, security, and performance
@@ -237,6 +233,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
             Replaced default logos and icons with custom branded assets,
             elevating the product's professional identity
           </li> -->
+          <!-- <li class="responsibilities">
+            Identified and resolved areas for improvement, complex bugs, and
+            issues across UI/UX, accessibility, security, and performance
+          </li>
           <li class="responsibilities">
             Researched and proposed deployment strategies, system, and hardware
             architecture, to reduce backend overhead, bandwidth consumption, and
@@ -251,7 +251,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
           <li class="responsibilities">
             Implemented rich and dynamic data visualization options to offer
             insightful representations of farming metrics to end-users
-          </li>
+          </li> -->
           <li class="responsibilities">
             Read more about my journey <a
               href="#"
