condensed job descriptions

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -127,26 +127,26 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
             ages 14-24, as part of an effort to substitute in-person internships
             with paid virtual skill development workshops.
           </li>
-          <li class="responsibilities">
+          <!-- <li class="responsibilities">
             Tailored morning and evening lectures to youth and adult cohorts,
             respectively, each class consisting of 8-12 students in 4 hour
-            classes, once a week (Wednesdays), over 5 weeks (40 instrcutional
+            classes, once a week (Wednesdays), over 5 weeks (40 instructional
             hours).
-          </li>
+          </li> -->
           <li class="responsibilities">
             Created a 5-week, virtual, curriculum focused on HTML, CSS,
             JavaScript, Command Line basics, git, GitHub, Figma, UI/UX design,
             web accessibility, and fundamentals of color theory and typography.
           </li>
-          <li class="responsibilities">
+          <!-- <li class="responsibilities">
             Employed engaging teaching methods including interactive lectures,
             live demos, hands-on exercises, 1-on-1 support, and peer code
             reviews.
-          </li>
-          <li class="responsibilities">
+          </li> -->
+          <!-- <li class="responsibilities">
             Final project had students build a website focused on a cause or
             belief core to their values and interests
-          </li>
+          </li> -->
         </ul>
         <p>
           Read more about
@@ -211,16 +211,17 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
         <!-- change food for good plotbot -->
         <ul>
           <li class="responsibilities">
-            Played a key role in conducting a comprehensive audit of legacy
-            code, driving enhancements, and new feature development for Plotbot,
-            a web and mobile application aimed at providing data visualization
-            for farming operations utilizing its proprietary, in-field sensors.
+            Played a key role in conducting a comprehensive audit of legacy code
+            and driving enhancements and new feature development for
+            <a href="https://www.plotbot.info/" target="_blank">Plotbot</a>, a
+            web and mobile application aimed at providing data visualization for
+            farming operations utilizing its proprietary, in-field sensors.
           </li>
-          <li class="responsibilities">
+          <!-- <li class="responsibilities">
             Worked closely with cross-functional teams to gather requirements,
             understand user needs, translate them into technical requirements,
             implement scalable solutions, and ensure optimal user experiences.
-          </li>
+          </li> -->
           <!-- <li class="responsibilities">
             Conducted a comprehensive frontend audit to identify areas for
             improvement across UI/UX, accessibility, security, and performance
@@ -262,7 +263,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
           <li class="responsibilities">
             <!-- Used React, Node.js, and MongoDB to build the platform -->
             <!-- icons for React, Node.js, MongoDB, and react native-->
-            <p>Technologies: React, Node, Express, MongoDB, Python, Arduino</p>
+            <!-- <p>Technologies: React, Node, Express, MongoDB, Python, Arduino</p> -->
             <span class="icons">
               <!-- <img
                 src="https://img.icons8.com/color/48/000000/react-native.png"
@@ -271,47 +272,47 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
               <img src="https://img.icons8.com/color/48/000000/mongodb.png" /> -->
               <!-- links to icons for technologies -->
               <a
-                href="https://img.icons8.com/color/48/000000/react-native.png"
+                href="https://img.icons8.com/color/32/000000/react-native.png"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="https://img.icons8.com/color/48/000000/react-native.png"
+                  src="https://img.icons8.com/color/32/000000/react-native.png"
                 /></a
               >
 
               <a
-                href="https://img.icons8.com/color/48/000000/nodejs.png"
+                href="https://img.icons8.com/color/32/000000/nodejs.png"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="https://img.icons8.com/color/48/000000/nodejs.png"
+                  src="https://img.icons8.com/color/32/000000/nodejs.png"
                 /></a
               >
 
               <a
-                href="https://img.icons8.com/color/48/000000/mongodb.png"
+                href="https://img.icons8.com/color/32/000000/mongodb.png"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="https://img.icons8.com/color/48/000000/mongodb.png"
+                  src="https://img.icons8.com/color/32/000000/mongodb.png"
                 /></a
               >
 
               <a
-                href="https://img.icons8.com/color/48/000000/python.png"
+                href="https://img.icons8.com/color/32/000000/python.png"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="https://img.icons8.com/color/48/000000/python.png"
+                  src="https://img.icons8.com/color/32/000000/python.png"
                 /></a
               >
 
               <a
-                href="https://img.icons8.com/color/48/000000/arduino.png"
+                href="https://img.icons8.com/color/32/000000/arduino.png"
                 target="_blank"
                 rel="noopener noreferrer"
                 ><img
-                  src="https://img.icons8.com/color/48/000000/arduino.png"
+                  src="https://img.icons8.com/color/32/000000/arduino.png"
                 /></a
               >
             </span>
