--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -7,7 +7,7 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
     <ul>
       <li>
         <a
-          href="https://danielsegarra.dev/LemonPianoPillow/"
+          href="https://danielsegarra.dev/StudentShowcase/"
           target="_blank"
           rel="noopener noreferrer"><mark>Student Accoplishments</mark></a
         >
