fixing urls to match cohorts

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -155,10 +155,10 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
         </p>
         <p>
           Check out SYEP <a
-            href="https://danielsegarra.dev/StudentShowcase/"
+            href="https://danielsegarra.dev/StudentShowcase/ITAG-CH1-2020/"
             target="_blank">Cohort 1's</a
           > and <a
-            href="https://danielsegarra.dev/StudentShowcase/"
+            href="https://danielsegarra.dev/StudentShowcase/ITAG-CH2-2020/"
             target="_blank">Cohort 2's</a
           > final projects!
         </p>
@@ -360,7 +360,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
         tech industry.
         <p>
           Check out <a
-            href="https://danielsegarra.dev/StudentShowcase/"
+            href="https://danielsegarra.dev/StudentShowcase/ITAG-CH4-2022/"
             target="_blank">Cohort 4's</a
           > final projects!
         </p>
@@ -397,7 +397,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
         </ul>
         <p>
           Check out <a
-            href="https://danielsegarra.dev/StudentShowcase/"
+            href="https://danielsegarra.dev/StudentShowcase/ITAG-CH5-2023/"
             target="_blank">Cohort 5's</a
           > final projects!
         </p>
@@ -436,7 +436,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
         </ul>
         <p>
           Check out <a
-            href="https://danielsegarra.dev/StudentShowcase/"
+            href="https://danielsegarra.dev/StudentShowcase/TKH-DDC-2023/"
             target="_blank">Columbia DDC Summer 2023</a
           > final projects!
         </p>
